# condocompare

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pom.xml
docker/postgres/: init.sql
frontend/: .dockerignore  Dockerfile  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  icon.tsx  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  providers.tsx
frontend/src/contexts/: AuthContext.tsx  ConfirmDialogContext.tsx  SnackbarContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useAnimatedCounter.ts  useNotificationCount.ts
frontend/src/lib/: api.ts  theme.ts
frontend/src/services/: apoliceService.ts  billingService.ts  chatHistoryService.ts  cnpjService.ts  condominioService.ts  dashboardService.ts  documentoService.ts  exportService.ts  iaService.ts  notificacaoService.ts  parceiroService.ts  seguradoraService.ts  sinistroService.ts  userService.ts  vistoriaService.ts
frontend/src/types/: index.ts
frontend/src/utils/: exportCsv.ts
ia-service/: Dockerfile  pyproject.toml  requirements.txt
ia-service/scripts/: generate_test_pdf.py
ia-service/src/: config.py  main.py
ia-service/src/api/: chat.py  diagnostico.py  documents.py  parceiros.py  rag.py  reports.py  vistoria.py
ia-service/src/rag/: __init__.py  chunker.py  store.py
ia-service/src/services/: llm.py
test_data/: parceiros_seed.json  seed_parceiros.py
(+299 files in other folders)
